# connect-four-game

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
src/: CMakeLists.txt
src/client/: Bot.cpp  Bot.h  BotBase.cpp  BotBase.h  CMakeLists.txt  Client.cpp  Client.h  ClientTypes.h  Client_fwd.h  IBot.h  client.cpp
src/proto/: CMakeLists.txt  game.proto
src/server/: CMakeLists.txt  ConnectFourGame.cpp  ConnectFourGame.h  ConnectionMetadata.h  Database.cpp  Database.h  GameManager.cpp  GameManager.h  GameStatistics.h  Player.h  PlayerManager.cpp  PlayerManager.h  RandomUtils.cpp  RandomUtils.h  Server.cpp  Server.h  ServerLogic.cpp  ServerLogic.h  ServerRequests.h  ServerTypes.h  main.cpp
